--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
     openWebUI:
         image: ghcr.io/open-webui/open-webui:main
         restart: always
@@ -12,6 +11,7 @@ services:
 
     ollama:
         image: ollama/ollama
+        container_name: ollama
         ports:
             - "11434:11434"
         devices:
@@ -20,24 +20,18 @@ services:
             - bash
             - -c
             - |
-                nvidia-smi -L
+              nvidia-smi -L
         volumes:
             - ollama-local:/root/.ollama
             - ./ollama/entrypoint.sh:/entrypoint.sh
-        
-        entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
+        entrypoint: [ "/usr/bin/bash", "/entrypoint.sh" ]
         
     app:
-        build:
-            context: ./app
-            dockerfile: Dockerfile
-        restart: always
+        build: ./app
+        container_name: app
         ports:
-            - "5001:5001"
-        environment:
-            - DATABASE_URL=postgresql://dbadmin:geoglify2024@host.docker.internal:5432/geoglify
-        volumes:
-            - ./app/:/app
+            - "3000:3000"
+        command: 'node main.js'
 
 volumes:
     ollama-local:
